fixed error about add letters

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     </header>
 
-    <main class="main border">
+    <main class="main">
 
 
         <button class="btn" id="btn-start-game" onclick="showHanged()">start Game</button>
