--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button class="btn" id="btn-start-game" onclick="showHanged()">start Game</button>
         <button class="btn" id="btn-add-word" onclick="addNewWord()">add new word</button>
 
-
+        <a href=""></a>
 
     </main>
 
